# robot

./: .gitignore  conectArm.sh  readme.md  ystemctl list-units --type=service | grep -i ultraleap || true
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/handpose_interfaces/share/handpose_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/handpose_interfaces/share/handpose_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_handpose_interfaces__rosidl_generator_cExport-noconfig.cmake  export_handpose_interfaces__rosidl_generator_cExport.cmake  export_handpose_interfaces__rosidl_generator_cppExport.cmake  export_handpose_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_handpose_interfaces__rosidl_generator_pyExport.cmake  export_handpose_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_handpose_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_handpose_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_handpose_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  handpose_interfacesConfig.cmake  handpose_interfaces__rosidl_typesupport_cExport-noconfig.cmake  handpose_interfaces__rosidl_typesupport_cExport.cmake  handpose_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  handpose_interfaces__rosidl_typesupport_cppExport.cmake  handpose_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  handpose_interfaces__rosidl_typesupport_introspection_cExport.cmake  handpose_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  handpose_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/handpose_interfaces/share/handpose_interfaces/msg/: HandFlange.idl
install/handpose_publisher/lib/handpose_publisher/: leap_handpose_publisher
install/handpose_publisher/share/handpose_publisher/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/handpose_publisher/share/handpose_publisher/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_handpose_publisher__rosidl_generator_cExport.cmake  export_handpose_publisher__rosidl_generator_cppExport.cmake  export_handpose_publisher__rosidl_generator_pyExport-noconfig.cmake  export_handpose_publisher__rosidl_generator_pyExport.cmake  export_handpose_publisher__rosidl_typesupport_fastrtps_cExport.cmake  handpose_publisherConfig.cmake  handpose_publisher__rosidl_typesupport_cExport-noconfig.cmake  handpose_publisher__rosidl_typesupport_cppExport.cmake  handpose_publisher__rosidl_typesupport_introspection_cExport-noconfig.cmake  handpose_publisher__rosidl_typesupport_introspection_cExport.cmake  handpose_publisher__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake
install/handpose_publisher/share/handpose_publisher/msg/: HandFlange.idl
install/handpose_visualizer/share/handpose_visualizer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/piper/share/piper/: package.sh
install/piper_description/share/piper_description/: package.sh
install/piper_gazebo/share/piper_gazebo/: local_setup.sh  package.sh
install/piper_handpose_controller/lib/piper_handpose_controller/: handpose_controller
install/piper_handpose_controller/share/piper_handpose_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/piper_humble/share/piper_humble/: local_setup.sh  package.sh
install/piper_msgs/share/piper_msgs/: local_setup.sh  package.sh
install/piper_msgs/share/piper_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_piper_msgs__rosidl_generator_cExport.cmake  export_piper_msgs__rosidl_generator_pyExport.cmake  export_piper_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_piper_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  piper_msgsConfig.cmake  piper_msgs__rosidl_typesupport_cExport.cmake  piper_msgs__rosidl_typesupport_cppExport.cmake  piper_msgs__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/piper_mujoco/share/piper_mujoco/: local_setup.sh  package.sh
install/piper_no_gripper_moveit/share/piper_no_gripper_moveit/: local_setup.sh  package.sh
install/piper_sdk/share/piper_sdk/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/piper_with_gripper_moveit/share/piper_with_gripper_moveit/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/handpose_interfaces/: CMakeLists.txt  package.xml
src/handpose_publisher/: CMakeLists.txt  package.xml
src/handpose_publisher/install/: local_setup.sh  setup.sh
src/handpose_publisher/install/handpose_publisher/share/handpose_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/handpose_publisher/log/: latest_build
src/handpose_publisher/src/: leap_handpose_publisher.cpp
src/handpose_visualizer/: setup.py
src/piper_handpose_controller/: package.xml  setup.cfg  setup.py
src/piper_handpose_controller/install/: local_setup.sh  setup.sh
src/piper_handpose_controller/install/piper_handpose_controller/share/piper_handpose_controller/: package.sh
src/piper_handpose_controller/log/: latest_build
src/piper_handpose_controller/piper_handpose_controller/: handpose_controller.py
src/piper_ros-humble/src/piper_description/urdf/: piper_description.urdf  piper_description.xacro  piper_description_gazebo.xacro  piper_description_old.urdf  piper_description_with_teach.urdf  piper_no_gripper_description.urdf  piper_no_gripper_description.xacro  piper_no_gripper_description_gazebo.xacro  (+1 more)
(+57 files in other folders)
