<?xml version="1.0"?>
<package format="3">
  <name>handpose_interfaces</name>
  <version>0.1.0</version>
  <description>Shared message interfaces for handpose (HandFlange)</description>
  <maintainer email="yue@todo.todo">yue</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>rosidl_default_generators</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
