<?xml version="1.0"?>
<package format="3">
  <name>handpose_publisher</name>
  <version>0.1.0</version>
  <description>Leap -> ROS2 publisher: publish desired flange RX/RY/RZ (millideg)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl generator/runtime deps (explicit) -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>rosidl_default_generators</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- runtime / compile deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>handpose_interfaces</depend>

  <!-- required so rosidl_generate_interfaces works properly -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>