<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piper_handpose_controller</name>
  <version>0.1.0</version>
  <description>Handpose-based control for Piper robotic arm</description>

  <maintainer email="yue@todo.todo">yue</maintainer>
  <license>MIT</license>

  <!-- Build tool (AMENT build system for Python packages uses ament_python as build type) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Piper & handpose message packages -->
  <depend>piper_msgs</depend>
  <depend>handpose_interfaces</depend>

  <!-- TF (if later needed) -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Optional Python numerical/filter libraries (system packages; install via apt) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-filterpy</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
